--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
  <html>
  <head>
- 	<meta charset="utf-8">
- 	<meta name="viewport" content="width=device-width, initial-scale=1">
  	<title>Hello</title>
  </head>
  <body>
- <h1>Hello this is my first page</h1>
+ <h1>This is a Heading</h1>
+ <p>This is just a dummy text</p>
+ <p>This is just another dummy text</p>
  </body>
+ <footer>For tech support email: support@123.com</footer>
  </html> 
