--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
- <html>
- <head>
- 	<title>Hello</title>
- </head>
- <body>
- <h1>This is a Heading</h1>
- <p>This is just a dummy text</p>
- <p>This is just another dummy text</p>
- </body>
- <footer>For tech support email: support@123.com</footer>
- </html> 
+<html>
+<head>
+    <title>Hello</title>
+</head>
+<body>
+    <h1 style="text-align: center; color: green; font-size: 60px;">This is a Heading</h1>
+    <p>This is just a dummy text</p>
+    <p>This is just another dummy text</p>
+    <footer>
+        <p onclick="alert('Wait')">For tech support email: support@123.com
+        </p>
+    </footer>
+</body>
+
+</html> 
